Style fixes for mobile breakpoints. Fixed the issue where mobile overlay would intercept all click events while overlaying the content but being invisible. Added contact page.

--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -2,12 +2,18 @@
 .dang-beer-logo {
   width: 50px;
   height: 50px;
-  top: 2rem;
-  left: 5rem;
+  top: 1.5rem;
+  left: 2rem;
   @apply .absolute;
   @apply .text-gray-900;
   @apply .font-bold;
   @apply .text-center;
+  @apply .z-10;
+
+  @screen lg {
+    top: 2rem;
+    left: 5rem;
+  }
 
   span {
     @apply .text-yellow-400;
